Add Google Maps embed for Pasir Ris cleanup location

--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@
         </section>
 
         <section id="map" class="map-section">
-            <h2>Cleanup Locations</h2>
-            <div id="map-container">
-                <!-- Map will be populated by JavaScript -->
+            <h2>Cleanup Locations</h2>            <div id="map-container">
+                <iframe
+                    width="100%"
+                    height="450"
+                    style="border:0"
+                    loading="lazy"
+                    allowfullscreen
+                    referrerpolicy="no-referrer-when-downgrade"
+                    src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=1.381497,103.955574&zoom=15&center=1.381497,103.955574&query=Next+Cleanup+at+Pasir+Ris">
+                </iframe>
             </div>
         </section>
     </main>
