--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
             <div class="weather-widget">
                 <!-- Weather data will be populated by JavaScript -->
             </div>
-        </section>
-
-        <section id="map" class="map-section">
-            <h2>Cleanup Locations</h2>            <div id="map-container">
-                <iframe
-                    width="100%"
-                    height="450"
-                    style="border:0"
-                    loading="lazy"
-                    allowfullscreen
-                    referrerpolicy="no-referrer-when-downgrade"
-                    src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=1.381497,103.955574&zoom=15&center=1.381497,103.955574&query=Next+Cleanup+at+Pasir+Ris">
+        </section>        <section id="map" class="map-section">
+            <h2>Cleanup Locations</h2>
+            <div id="map-container">
+                <iframe 
+                    width="100%" 
+                    height="450" 
+                    frameborder="0" 
+                    scrolling="no" 
+                    marginheight="0" 
+                    marginwidth="0" 
+                    src="https://www.openstreetmap.org/export/embed.html?bbox=103.94557237625123%2C1.3714970183098553%2C103.96557378768922%2C1.3914970183098553&amp;layer=mapnik&amp;marker=1.381497%2C103.955574"
+                    style="border: 1px solid #ccc">
                 </iframe>
+                <br/>
+                <small>
+                    <a href="https://www.openstreetmap.org/?mlat=1.381497&amp;mlon=103.955574#map=16/1.381497/103.955574">View Larger Map</a>
+                </small>
             </div>
         </section>
     </main>
